packages/components/bolt-dropdown/src/dropdown.scss
@import '@bolt/core';


bolt-dropdown {
  display: block;

  --bolt-nav-item-opacity: 0;
  --bolt-nav-item-transform: translateY(bolt-spacing(large) * -1);
  --bolt-nav-indicator-opacity: 0;

  &[collapse]{
    @include respond-to(small) {
      --bolt-nav-item-opacity: 1;
      --bolt-nav-item-transform: none;
      --bolt-nav-indicator-opacity: 1;
    }
  }
}

bolt-dropdown-item {
  bolt-navlink {
    overflow: hidden; // Firefox: Fixes an overflow issue ONLY in context of  bolt-navlink within bolt-dropdown-item
  }
}


// bolt-dropdown-content {
//   display: block;
//   background-color: #f5f5fa;
// }



.c-bolt-dropdown {
  overflow: hidden;
  position: relative;

  background-color: inherit;
  background-color: var(--bolt-theme-background, inherit);
  box-shadow: 0 1px 2px 1px rgba(6, 10, 36, 0.1);
}

.c-bolt-dropdown__header {
  @include bolt-font-weight(semibold);
  position: relative;
  z-index: 10;
  margin: 0;
  display: flex;
  background-color: inherit;
  background-color: var(--bolt-theme-background, inherit);
  box-shadow: 0 1px 2px 0 rgba(bolt-color(black), 0.1);

  .c-bolt-dropdown--collapse\@small & {
    @include respond-to(small) {
      display: none;
    }
  }

   &:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    pointer-events: none;
    z-index: -1;
    display: block;
    background-color: transparent;
    transition: opacity .1s ease;
    opacity: 0;
    background-color: var(--bolt-theme-heading-link);
  }
}


// .c-bolt-dropdown__header-button {
//   -webkit-appearance: none;
//   border: none;
//   background-color: transparent;
//   color: currentColor;
//   color: var(--bolt-theme-heading-link-default, inherit);

//   outline-offset: -3px;
//   outline-width: 2px;
//   outline-color: bolt-color(white);

//   display: none;
//   align-items: center; // vertical align
//   justify-content: space-between;

//   &[aria-expanded] {
//     display: flex;
//   }

//   .c-bolt-dropdown__header--center & {
//     justify-content: center;
//   }
// }

.c-bolt-dropdown__header:hover:after {
  opacity: 0.05;
}

// .c-bolt-dropdown__header--opened:after {
//   opacity: 0.15;
// }

// .c-bolt-dropdown__header--focus:after,
.c-bolt-dropdown__header:active:after {
  opacity: 0.15;
}

// &:hover {
//   color: var(--bolt-theme-heading-link-hover, inherit);
//   &:after {
//     opacity: 0.05;
//   }
// }

// &:active {
//   color: var(--bolt-theme-heading-link-active, inherit);
//   &:after {
//     opacity: 0.5; // background-color: #FFFFFF;
//   }
// }


.c-bolt-dropdown__header-button,
.c-bolt-dropdown__header-label {
  @include bolt-padding-top(small);
  @include bolt-padding-bottom(small);
  @include bolt-padding-left(medium);
  @include bolt-padding-right(medium);
  @include bolt-font-size(medium);
  @include bolt-font-weight(semibold);

  margin-bottom: 0;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 2;
  width: 100%;
  font: inherit;

  -webkit-appearance: none;
  border: none;
  background-color: transparent;
  color: currentColor;
  color: var(--bolt-theme-heading-link-default, inherit);

  //outline-offset: -3px;
  //outline-width: 2px;
  //outline-color: bolt-color(white);
  outline: none;

  &:-moz-focusring { // Firefox specific fix for removing the dotted outline
    outline: none;
  }

  align-items: center; // vertical align
  justify-content: space-between;

  display: flex;
  background-color: inherit;
  background-color: var(--bolt-theme-background, inherit);

  .c-bolt-dropdown__header--center & {
    justify-content: center;
  }
}


[aria-expanded] ~ .c-bolt-dropdown__label,
[aria-expanded] ~ .c-bolt-dropdown__toggle {
  display: none;
}


.c-bolt-dropdown__header-link {
  right: 0;
  cursor: default;
  display: none;
  position: absolute;
  top: 0;
  width: 1px;
  height: 1px;
  z-index: 10;

  &:focus {
    outline-offset: -6px;
    width: 25px;
    height: 38px;
    outline: 3px solid #c1e0fe;
    outline: 3px solid rgba(131, 192, 253, .5);
    outline-offset: 1px;
  }
}


.c-bolt-dropdown__toggle--open {
  display: block;
}
.c-bolt-dropdown__state:target + .c-bolt-dropdown .c-bolt-dropdown__toggle--open,
.c-bolt-dropdown__state:checked + .c-bolt-dropdown .c-bolt-dropdown__toggle--open {
  display: none;
}


.c-bolt-dropdown__toggle--close {
  display: none;
}

.c-bolt-dropdown__state:target + .c-bolt-dropdown .c-bolt-dropdown__toggle--close,
.c-bolt-dropdown__state:checked + .c-bolt-dropdown .c-bolt-dropdown__toggle--close {
  display: block;
}
.c-bolt-dropdown__state:target+.c-bolt-dropdown .c-bolt-dropdown__toggle--close {
  // height: 50px;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
}


.c-bolt-dropdown__content {
  overflow: auto;
  transition: all .2s cubic-bezier(0, 0, .3, 1) .1s;
  position: relative;
  box-shadow: 0 1px 2px 1px rgba(6, 10, 36, 0.1);
  left: 0;
  width: 100%;
  z-index: 1;
  transform: translateY(-100px);
  display: none;
  height: 0;

  &[data-open]:not([style*="height"]) {
    transition: none;
    height: auto;
    visibility: visible;
  }

  &:not([role="region"]){
    max-height: 0px; // Height of bar
    visibility: hidden;
    display: block;
    height: auto;
  }

  .c-bolt-dropdown--collapse\@small & {
    @include respond-to(small) {
      max-height: none;
      visibility: visible;
      display: block;
      height: auto;
      transform: translate3d(0, 0, 0);
    }
  }
}
/* ... */

